# vulkan-rust

./: Cargo.toml  README.md  config.toml
midi_monitor/: Cargo.toml
midi_monitor/src/: main.rs
resources/vulkan-rust-example/: Cargo.toml
resources/vulkan-triangle-rs/: Cargo.toml  build_shaders.sh
resources/vulkan-tutorial-rs/src/: fs.rs
src/: main.rs
src/shaders/: crystal-copy-03.frag  crystal-copy-12.frag  crystal.frag  crystal3.frag  crystal_copy_16.frag  crystalline.frag  crystalline.vert  fullscreen.vert  scaffold.frag  terrain.vert
test/vulkan_test/: main.rs
test/vulkan_test/src/: main.rs
test/vulkan_test_chatgpt/: Cargo.toml
test/vulkan_test_chatgpt/src/: main.rs
test/vulkan_test_claude/src/shaders/: fullscreen.vert  gradient.frag
test/vulkan_test_claude_midi/: Cargo.toml  config.toml  main.rs
test/vulkan_test_claude_midi/src/: main.rs
test/vulkan_test_claude_midi/src/shaders/: crystal-copy-07.frag  crystal.frag  crystal.vert  crystal2.vert  fullscreen.vert  gradient.frag  scaffold.frag  terrain.frag  terrain.vert
test/vulkan_test_claude_midi_orig_single_file/: main_vert.rs  patch
test/vulkan_test_claude_midi_orig_single_file/src/: main.rs  osc.rs
test/vulkan_test_claude_midi_orig_single_file/src/shaders/: crystal-copy-08.frag  crystal-copy-10.frag  crystal-copy.frag  crystal.vert  crystal2.frag  crystal5.frag  crystal_copy_15.frag  crystalline2.vert  gradient.frag
test/vulkan_test_claude_midi_project/: Cargo.toml  README.md
test/vulkan_test_claude_midi_project/shaders/: custom.frag
test/vulkan_test_claude_midi_project/src/: app.rs  config.rs  main.rs  utils.rs
test/vulkan_test_claude_midi_project/src/input/: midi.rs  mod.rs
test/vulkan_test_claude_midi_project/src/renderer/: context.rs  mod.rs
vulkan-rust-claude/: Cargo.toml
vulkan-rust-claude/src/: main.rs
vulkan-triangle-rs/: build_shaders.sh
vulkan-triangle-rs/src/: main.rs
vulkan-tutorial-rs/: Cargo.toml
vulkan-tutorial-rs/src/: context.rs  debug.rs  main.rs  math.rs  texture.rs
