[package]
name = "vulkan-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ash = { version = "0.38", default-features = false, features = ["linked"] }
ash-window = "0.13"
winit = "0.30"
raw-window-handle = "0.6"
shaderc = { version = "0.8", features = ["build-from-source"] }
midir = "0.10.2"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"  # New
cpal = "0.15"
rustfft = "6"
rosc = "0.10"