[package]
name = "vulkan-clear-latest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Vulkan + windowing (latest as of Aug 24, 2025)
ash = { version = "0.38", default-features = false, features = ["linked"] }
ash-window = "0.13"
winit = "0.30"
raw-window-handle = "0.6"

